tests/semantic/rule_undeclared_relation2/rule_undeclared_relation2.err
Error: Undefined relation b in file rule_undeclared_relation2.dl at line 5
a(X) :- a(X), !b(X).
---------------^-----
1 errors generated, evaluation aborted
