tests/semantic/rule_undeclared_relation2/rule_undeclared_relation2.dl

.decl a(X:symbol)

// this should produce an error because b is not defined
a(X) :- a(X), !b(X).

